# material_database

./: .gitattributes  .gitignore  pyproject.toml
scripts/alexandria/: download.py  to_matbind_graphs.py  to_parquet.py  to_pxrd_patterns.py  to_pxrd_peaks.py  to_pymatgen.py  to_robocrys.py
scripts/icsd/: download.py  standardize.py
scripts/materials_project/: download.py
src/material_database/: combine.py  constants.py  deserialization.py  iterate.py  serialization.py  to_robocrys.py  types_.py
src/material_database/alexandria/: download.py  parse.py  reading.py  sanitize.py
src/material_database/cif/: parsing.py  writing.py
src/material_database/cif/parsing/: atomic_sites.py  coordinates.py  file.py  lattice.py  logger.py  magnetic_cif.py  old_parser.py  parser.py  sanitization.py  spacegroup.py  utils.py  wyckoffs.py
src/material_database/cif/parsing/magnetic/: __init__.py  sanitization.py
src/material_database/cif/pymatgen/: block.py  file.py  magnetic_cif.py  parse_lattice.py  parser.py  sanitization.py
src/material_database/cif/pymatgen/magnetic/: sanitization.py
src/material_database/dataloading/: _duckdb.py
src/material_database/dataloading/_torch/: datamodule.py  streaming_parquet_dataset.py  transformable_dataset.py
src/material_database/icsd/: client.py  constants.py
src/material_database/matbind_graphs/: core.py
src/material_database/pxrd/: peak_calculation.py  peak_convolution.py
src/material_database/utils/: url_download.py
