[project]
name = "material-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jona", email = "jona.oestreicher@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckdb>=1.3.0",
    "huggingface-hub[cli]>=0.35.1",
    "monty>=2025.3.3",
    "mp-api>=0.45.8",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "pymatgen>=2025.5.28",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "xrdsim",
]

[project.scripts]
material-database = "material_database:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
xrdsim = { git = "https://github.com/Jona210399/xrdsim" }
